# book_shop_drf_p23

./: .gitignore  Makefile  pyproject.toml  task  toDo
apps/: urls.py
apps/shared/: models.py  pagination.py
apps/shops/: admin.py  models.py  serializer.py  task.py  urls.py  views.py
apps/shops/migrations/: 0001_initial.py  0002_initial.py  0003_delete_country.py
apps/users/: admin.py  email_service.py  models.py  serializers.py  task.py  urls.py  views.py
apps/users/fixtures/: country.json
apps/users/migrations/: 0001_initial.py  0002_remove_user_first_name_remove_user_last_name_and_more.py
root/: celery.py  drf_settings.py  settings.py  urls.py
